--- a/index.html
+++ b/index.html
@@ -2,10 +2,15 @@
 
 <head>
 
+
+    <link rel="icon" type="image/png" href="./images/logo-icon.png">
+
+
+
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Movies</title>
+    <title>Wuxi we watch?</title>
 
     <link rel="stylesheet" href="style.css" />
 
