--- a/index.html
+++ b/index.html
@@ -16,6 +16,14 @@
 
     <script src="script.js" defer></script>
 
+    <style>
+        form {
+            text-align: center;
+            margin: 0 auto;
+            /* This will center the header */
+        }
+    </style>
+
 </head>
 
 <body>
